--- a/meta/404_styles.css
+++ b/meta/404_styles.css
@@ -42,7 +42,7 @@ body {
   font-weight: 900;
   margin: 0px;
   text-transform: uppercase; 
-  background: url('../images/404_text.png');
+  background: url('../meta/images/404_text.png');
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-size: cover;
